project/apps/network-policies/authentik/00-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authentik-default-deny
  namespace: authentik
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
